# django_menu

./: README.md  pyproject.toml
menus/: settings.py  urls.py
menus/templates/: menu.html
menus/treemenu/: admin.py  apps.py  models.py  urls.py  views.py
menus/treemenu/migrations/: 0001_initial.py
menus/treemenu/templatetags/: menu_tags.py
