[tool.poetry]
name = "employ"
version = "0.1.0"
description = ""
authors = ["amrylnikov <amrylnikov@gmail.com>"]
readme = "README.md"
packages = [{include = "menus"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-bootstrap5 = "^23.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
